log
Thu Mar 26 07:16:37 PM UTC 2026: 
 list.c | 78 +++++++++---------------------------------------------------------
 1 file changed, 10 insertions(+), 68 deletions(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:38:1: error: control reaches end of non-void function [-Werror=return-type]
   38 | }
      | ^
list.c: In function ‘nextList’:
list.c:42:1: error: control reaches end of non-void function [-Werror=return-type]
   42 | }
      | ^
list.c: In function ‘lastList’:
list.c:46:1: error: control reaches end of non-void function [-Werror=return-type]
   46 | }
      | ^
list.c: In function ‘prevList’:
list.c:50:1: error: control reaches end of non-void function [-Werror=return-type]
   50 | }
      | ^
list.c: In function ‘popCurrent’:
list.c:76:1: error: control reaches end of non-void function [-Werror=return-type]
   76 | }
      | ^
cc1: all warnings being treated as errors
dd64942
